2003-12-25  MINAMI Hirokazu  <minami@mistfall.net>

	* tools/mlconfig/main.c: made gettext work with GTK2.

	* Re-mapping of keys using xmodmap now should be handled properly.
	* Keys that can be locked(Num_Lock/Scroll_Lock/ISO-Level3_Lock)
	 are no longer regarded as a valid modifier key.

2003-12-24  Seiichi SATO  <ssato@sh.rim.or.jp>

	* contrib/scrollbar/pixmap_engine/pixmap_engine.c: fixed a problem when
	  slider images was not presented.

2003-12-22  MINAMI Hirokazu  <minami@mistfall.net>

	* x_window.c: selection conversion request type "TARGETS"
	 is now supported( clipboard now should work with KDE klipper).

2003-12-21  Seiichi SATO  <ssato@sh.rim.or.jp>

	* mlterm/ml_pty_win32.c: Added:-)
	* configure.in mlterm/Makefile.in: Only a few changes for ml_pty_win32.c
	* man page: Updated the maximum number of windows in MULTIPLE PTY
	  section.
	* etc/xim: Added uim-anthy, uim-skk, uim-tcode, uim-prime and
	  uim-tutcode.
	  Notes:
	  - Uim is available at http://www.freedesktop.org/Software/uim
	  - uim-xim version 0.2.0 said 'Now only supports Japanese' on startup.
	  - I've tested uim-anthy and uim-prime for a little while, both seem
	    to work fine with mlterm.

2003-12-11  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_screen.c: fixed an off-by-one error in get_mod_meta_mask().
	  (modifiermap[8*max_keypermod] shouldn't be accessed)
	* removed redundant spaces/ corrected typo.

2003-11-24  Seiichi SATO  <ssato@sh.rim.or.jp>

	* configure.in, mlterm/Makefile: Added AC_CANONICAL_HOST,
	  AC_CANONICAL_TARGET and mingw32-dependent stuff.

2003-11-24  Seiichi SATO  <ssato@sh.rim.or.jp>

	* kiklib/configure.in, kiklib/src/kik_config.h.in:
	  Added AC_CHECK_TYPE(ssize_t,int), since mingw32 does not have ssize_t.
	  (Does anybody know if this will work on Win64?)

2003-11-03  Araki Ken  <arakiken@users.sf.net>

	* Enbugged by [2003-10-31-2]. Fixed.

2003-10-31  Araki Ken  <arakiken@users.sf.net>

	* The color of log lines sometimes reversed or restored